PMA-1045 moved RequestQuery processing to DAO; refactoring in report resource generation